About Me section: Added an image on the right of the section so that the text doesn’t look so dragged on Contact section: Reduced padding on the “see something you like? Lets chat” because it had way too much padding Section Headers: Fixed inconsistency in tags being used

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ body {
 .link {
   margin: 0 10px;
   color: #d096a5;
+  cursor: pointer;
 }
 
 /* Introduction */
@@ -190,18 +191,30 @@ body {
   background-color: #392e32;
   border-radius: 10px;
   display: flex;
+  flex-direction: row;
+}
+
+.about-me-text {
+  display: flex;
   flex-direction: column;
 }
 
 .about-me-sentences {
-  margin: 10px 0;
+  margin: 10px;
   display: flex;
   flex-direction: row;
-  /* width: 60%; */
 }
 
 .bullet-point {
   margin: 0 15px;
+}
+
+.about-me-image {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 20px;
+  margin: auto 10px;
 }
 
 /* Contact */
@@ -230,7 +243,7 @@ body {
 
 .contact-text {
   font-size: 50px;
-  padding: 40px;
+  padding: 20px;
 }
 
 .contact-link-box {
